# SlicerDiffusionQC

./: .gitattributes  .gitignore  .lfsconfig  CMakeLists.txt  LICENSE  README.md  SuperBuild.cmake  TODO.txt  config.ini  config.ini.bak  emptyFile.txt  run_test.py
GradQC/: GradQC.py
GradQC/gradqclib/: slicerUserInteraction.py
SlicerDiffusionQC/: CMakeLists.txt  GradQC.py
SlicerDiffusionQC/gradqclib/: slicerUserInteraction.py
SuperBuild/: External_python-diffusionqclib.cmake
Test/: CMakeLists.txt  README.md  run_test.py
Test/Baseline/: SiemensTrio-Syngo2004A-1.nrrd  SiemensTrio-Syngo2004A-1.nrrd.license.txt  SiemensTrio-Syngo2004A-1_KLdiv.npy  SiemensTrio-Syngo2004A-1_QC.csv  SiemensTrio-Syngo2004A-1_QC.npy  SiemensTrio-Syngo2004A-1_bse.nrrd  SiemensTrio-Syngo2004A-1_confidence.npy  SiemensTrio-Syngo2004A-1_mask.nrrd  SiemensTrio-Syngo2004A-1_modified.nrrd
cli-modules/diffusionQC/: CMakeLists.txt  diffusionQC.py  diffusionQC.xml  diffusionQC_real.py
cli-modules/diffusionQC/Testing/Cxx/: CMakeLists.txt
cli-modules/diffusionQC/qclib/: config.ini  createMask.sh  dwi_attributes.py  gradient_process.py  saveResults.py  test.py
diffusionQC/: CMakeLists.txt  diffusionQC.py  diffusionQC.xml
diffusionQC/Testing/: CMakeLists.txt
diffusionQC/qclib/: dwi_attributes.py  gradient_process.py  saveResults.py
diffusionqclib/: CMakeLists.txt  gradient_process.py  setup.py
diffusionqclib/diffusionqclib/: bval_bvec_io.py  dwi_attributes.py  gradient_process.py  nhdr_write.py  saveResults.py  test_data_creation.py
test_data/ref/: 1001-dwi-xc_test_KLdiv.npy  1001-dwi-xc_test_confidence.npy  5006-dwi-xc_test_KLdiv.npy  5006-dwi-xc_test_QC.csv  5006-dwi-xc_test_QC.npy  5006-dwi-xc_test_confidence.npy
